@@ -8,9 +8,13 @@ h2(#sirius7.4.1). Changes in Sirius  Desktop 7.4.1
 
 h3. User-Visible Changes
 
+* <span class="label label-info">Modified</span> The UI preference @SiriusUIPreferencesKeys.PREF_DISPLAY_VSM_USER_FIXED_COLOR_IN_PALETTE@ has been renamed from "Display viewpoints colors" to "Display suggested colors in color palette". 
+
 h3. Specifier-Visible Changes
 
 h3. Developer-Visible Changes
+
+* <span class="label label-info">Modified</span> The method @org.eclipse.sirius.diagram.ui.tools.api.color.ColorManager.collectVsmColors(Session)@ has replaced @Map<String, RGB> collectVsmAndDefaultColors(Session session)@.
 
 
 h2(#sirius7.4.0). Changes in Sirius  Desktop 7.4.0
